--- a/Code/wind_spd_processing.ipynb
+++ b/Code/wind_spd_processing.ipynb
@@ -577,6 +577,38 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Missing date: DatetimeIndex(['2010-03-02', '2012-04-01', '2012-04-02', '2012-04-03',\n",
+      "               '2012-04-04', '2012-04-05', '2012-04-06', '2012-04-07',\n",
+      "               '2012-04-08', '2012-04-09',\n",
+      "               ...\n",
+      "               '2012-11-19', '2012-11-20', '2012-11-21', '2012-11-22',\n",
+      "               '2012-11-23', '2021-03-10', '2021-03-11', '2021-03-12',\n",
+      "               '2021-03-13', '2021-03-14'],\n",
+      "              dtype='datetime64[ns]', length=227, freq=None)\n",
+      "There are 227 missing dates\n"
+     ]
+    }
+   ],
+   "source": [
+    "#For 46025\n",
+    "# Generate a complete date range for 2010\n",
+    "all_dates = pd.date_range(start=\"2008-03-05\", end=\"2023-12-31\")\n",
+    "\n",
+    "# Find the missing date\n",
+    "missing_date = all_dates.difference(fin_df['time'])\n",
+    "print(\"Missing date:\", missing_date)\n",
+    "print(f'There are {len(missing_date)} missing dates')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
    "outputs": [
