--- a/Code/Data_cleaning.ipynb
+++ b/Code/Data_cleaning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -136,7 +136,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Location_Code                                       0\n",
+       "latitude (degrees_north)                            0\n",
+       "longitude (degrees_east)                            0\n",
+       "depth (m)                                         858\n",
+       "SampleID                                            0\n",
+       "time (UTC)                                          0\n",
+       "Temp (degree_C)                                     0\n",
+       "Air_Temp (degree_C)                               858\n",
+       "Salinity                                          858\n",
+       "Chl_Volume_Filtered (mL)                            9\n",
+       "Chl1 (mg/m3)                                       10\n",
+       "Chl2 (mg/m3)                                       11\n",
+       "Avg_Chloro (mg/m3)                                 10\n",
+       "Phaeo1 (mg/m3)                                     10\n",
+       "Phaeo2 (mg/m3)                                     11\n",
+       "Avg_Phaeo (mg/m3)                                  10\n",
+       "Phosphate (uM)                                     26\n",
+       "Silicate (uM)                                      26\n",
+       "Nitrite (uM)                                       26\n",
+       "Nitrite_Nitrate (uM)                              858\n",
+       "Ammonium (uM)                                      27\n",
+       "Nitrate (uM)                                       26\n",
+       "DA_Volume_Filtered (mL)                            11\n",
+       "pDA (ng/mL)                                        11\n",
+       "tDA (ng/mL)                                       858\n",
+       "dDA (ng/mL)                                       858\n",
+       "Volume_Settled_for_Counting (mL)                  858\n",
+       "Akashiwo_sanguinea (cells/L)                      587\n",
+       "Alexandrium_spp (cells/L)                         587\n",
+       "Dinophysis_spp (cells/L)                          587\n",
+       "Lingulodinium_polyedra (cells/L)                  587\n",
+       "Prorocentrum_spp (cells/L)                        587\n",
+       "Pseudo_nitzschia_delicatissima_group (cells/L)    587\n",
+       "Pseudo_nitzschia_seriata_group (cells/L)          587\n",
+       "Ceratium_spp (cells/L)                            587\n",
+       "Cochlodinium_spp (cells/L)                        587\n",
+       "Gymnodinium_spp (cells/L)                         587\n",
+       "Other_Diatoms (cells/L)                           587\n",
+       "Other_Dinoflagellates (cells/L)                   587\n",
+       "Total_Phytoplankton (cells/L)                     587\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "na_per_column = pier_data.isna().sum()\n",
+    "na_per_column"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -228,7 +289,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -240,9 +301,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "303    2014-04-21T19:05:00Z\n",
+      "613    2020-03-30T18:40:00Z\n",
+      "614    2020-04-07T20:30:00Z\n",
+      "615    2020-04-13T18:40:00Z\n",
+      "616    2020-04-20T19:26:00Z\n",
+      "617    2020-04-27T18:17:00Z\n",
+      "618    2020-05-04T19:35:00Z\n",
+      "619    2020-05-11T19:50:00Z\n",
+      "620    2020-05-18T19:35:00Z\n",
+      "621    2020-05-26T19:30:00Z\n",
+      "Name: time (UTC), dtype: object\n"
+     ]
+    }
+   ],
    "source": [
     "missing_times_for_chloro = paper_data.loc[paper_data['Avg_Chloro (mg/m3)'].isna(), 'time (UTC)']\n",
     "print(missing_times_for_chloro)"
@@ -250,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -551,7 +630,7 @@
        "[832 rows x 15 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -573,7 +652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -874,7 +953,7 @@
        "[832 rows x 15 columns]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -908,7 +987,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -955,43 +1034,43 @@
       "831    1024.321284       17.80       33.625    1024.169303  \n",
       "\n",
       "[832 rows x 15 columns]\n",
-      "Mean Squared Error: 13.945144794625106\n",
-      "R-squared: -0.20795205211865841\n"
+      "Mean Squared Error: 34.97169939161679\n",
+      "R-squared: 0.0325932130040818\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/5y/74w_zv855875xvjtmhp4g1xw0000gn/T/ipykernel_6821/4233386626.py:11: FutureWarning: DataFrame.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
+      "/var/folders/5y/74w_zv855875xvjtmhp4g1xw0000gn/T/ipykernel_15409/4233386626.py:11: FutureWarning: DataFrame.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
       "  X_filled_forward = X.fillna(method='ffill').fillna(method='bfill')\n",
-      "/var/folders/5y/74w_zv855875xvjtmhp4g1xw0000gn/T/ipykernel_6821/4233386626.py:12: FutureWarning: DataFrame.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
+      "/var/folders/5y/74w_zv855875xvjtmhp4g1xw0000gn/T/ipykernel_15409/4233386626.py:12: FutureWarning: DataFrame.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
       "  X_filled_backward = X.fillna(method='bfill').fillna(method='ffill')\n",
-      "/var/folders/5y/74w_zv855875xvjtmhp4g1xw0000gn/T/ipykernel_6821/4233386626.py:11: FutureWarning: Series.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
+      "/var/folders/5y/74w_zv855875xvjtmhp4g1xw0000gn/T/ipykernel_15409/4233386626.py:11: FutureWarning: Series.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
       "  X_filled_forward = X.fillna(method='ffill').fillna(method='bfill')\n",
-      "/var/folders/5y/74w_zv855875xvjtmhp4g1xw0000gn/T/ipykernel_6821/4233386626.py:12: FutureWarning: Series.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
+      "/var/folders/5y/74w_zv855875xvjtmhp4g1xw0000gn/T/ipykernel_15409/4233386626.py:12: FutureWarning: Series.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
       "  X_filled_backward = X.fillna(method='bfill').fillna(method='ffill')\n",
-      "/var/folders/5y/74w_zv855875xvjtmhp4g1xw0000gn/T/ipykernel_6821/4233386626.py:11: FutureWarning: DataFrame.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
+      "/var/folders/5y/74w_zv855875xvjtmhp4g1xw0000gn/T/ipykernel_15409/4233386626.py:11: FutureWarning: DataFrame.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
       "  X_filled_forward = X.fillna(method='ffill').fillna(method='bfill')\n",
-      "/var/folders/5y/74w_zv855875xvjtmhp4g1xw0000gn/T/ipykernel_6821/4233386626.py:12: FutureWarning: DataFrame.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
+      "/var/folders/5y/74w_zv855875xvjtmhp4g1xw0000gn/T/ipykernel_15409/4233386626.py:12: FutureWarning: DataFrame.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
       "  X_filled_backward = X.fillna(method='bfill').fillna(method='ffill')\n",
-      "/var/folders/5y/74w_zv855875xvjtmhp4g1xw0000gn/T/ipykernel_6821/4233386626.py:11: FutureWarning: DataFrame.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
+      "/var/folders/5y/74w_zv855875xvjtmhp4g1xw0000gn/T/ipykernel_15409/4233386626.py:11: FutureWarning: DataFrame.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
       "  X_filled_forward = X.fillna(method='ffill').fillna(method='bfill')\n",
-      "/var/folders/5y/74w_zv855875xvjtmhp4g1xw0000gn/T/ipykernel_6821/4233386626.py:12: FutureWarning: DataFrame.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
+      "/var/folders/5y/74w_zv855875xvjtmhp4g1xw0000gn/T/ipykernel_15409/4233386626.py:12: FutureWarning: DataFrame.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
       "  X_filled_backward = X.fillna(method='bfill').fillna(method='ffill')\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "[0.9041916167664671,\n",
-       " 0.1111111111111111,\n",
-       " 0.05063291139240506,\n",
-       " 0.9493670886075949,\n",
-       " 0.8888888888888888]"
+       "[0.9281437125748503,\n",
+       " 0.3333333333333333,\n",
+       " 0.0379746835443038,\n",
+       " 0.9620253164556962,\n",
+       " 0.6666666666666666]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1055,7 +1134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1064,7 +1143,7 @@
        "nan"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1075,7 +1154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
