--- a/Code/EDM_modeling.ipynb
+++ b/Code/EDM_modeling.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -78,17 +78,17 @@
      "output_type": "stream",
      "text": [
       "     time (UTC)  Avg_Chloro  Nitrate  Phosphate  Silicate  Nitrite  \\\n",
-      "0           NaN        1.82     0.43       0.24       5.6     0.03   \n",
-      "1           NaN        2.71     0.83       0.37       5.1     0.04   \n",
-      "2           NaN        0.99     0.45       0.24       3.5     0.00   \n",
-      "3           NaN        1.23     0.34       0.17       4.2     0.00   \n",
-      "4           NaN        2.41     0.29       0.12       3.8     0.00   \n",
+      "0           0.0        1.82     0.43       0.24       5.6     0.03   \n",
+      "1           7.0        2.71     0.83       0.37       5.1     0.04   \n",
+      "2          13.0        0.99     0.45       0.24       3.5     0.00   \n",
+      "3          20.0        1.23     0.34       0.17       4.2     0.00   \n",
+      "4          28.0        2.41     0.29       0.12       3.8     0.00   \n",
       "..          ...         ...      ...        ...       ...      ...   \n",
-      "827         NaN        3.22     0.85       0.30       6.2     0.00   \n",
-      "828         NaN        3.39     0.45       0.25       4.9     0.00   \n",
-      "829         NaN        7.82     0.00       0.17       5.2     0.00   \n",
-      "830         NaN       17.30     0.00       0.20       9.4     0.00   \n",
-      "831         NaN       16.71     0.00       0.10       7.5     0.00   \n",
+      "827      5789.0        3.22     0.85       0.30       6.2     0.00   \n",
+      "828      5796.0        3.39     0.45       0.25       4.9     0.00   \n",
+      "829      5803.0        7.82     0.00       0.17       5.2     0.00   \n",
+      "830      5811.0       17.30     0.00       0.20       9.4     0.00   \n",
+      "831      5817.0       16.71     0.00       0.10       7.5     0.00   \n",
       "\n",
       "     SURF_TEMP_C  BOT_TEMP_C  SURF_SAL_PSU  BOT_SAL_PSU  SURF_DENS_kgm3  \\\n",
       "0           20.3        15.9         33.77        33.62     1023.638094   \n",
@@ -122,13 +122,14 @@
    ],
    "source": [
     "paper_data = pd.read_csv('Data/cleaned_data.csv')\n",
+    "paper_data = paper_data.set_index('time (UTC)')\n",
     "paper_data['Time'] = paper_data.index\n",
     "print(paper_data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -172,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -558,7 +559,7 @@
        "[832 rows x 24 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -575,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -624,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -761,7 +762,7 @@
        "14   9.00  0.142986"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -773,7 +774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -909,7 +910,7 @@
        "Name: 814, dtype: float64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -954,7 +955,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1084,7 +1085,7 @@
        "[132 rows x 4 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1095,7 +1096,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1108,7 +1109,7 @@
        " 0.5714285714285714]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1119,7 +1120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1305,10 +1306,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x327f3b370>"
+       "<matplotlib.collections.PathCollection at 0x17ceca1c0>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1349,7 +1350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1369,7 +1370,7 @@
        "Name: Observations, Length: 81, dtype: float64"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1380,7 +1381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1583,7 +1584,7 @@
        "[832 rows x 9 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
