--- a/Code/EDM_modeling.ipynb
+++ b/Code/EDM_modeling.ipynb
@@ -1759,7 +1759,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "pyedm_env",
    "language": "python",
    "name": "python3"
   },
@@ -1773,7 +1773,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.5"
+   "version": "3.9.21"
   }
  },
  "nbformat": 4,
