weak learner ensemble tuned and saved

--- a/Code/NeuralEDM/test_results.ipynb
+++ b/Code/NeuralEDM/test_results.ipynb
@@ -2,21 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'gru_nn.py'; 'gru_nn' is not a package",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[59], line 8\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpandas\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mpd\u001b[39;00m\n\u001b[1;32m      7\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mnn_edm\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;241m*\u001b[39m\n\u001b[0;32m----> 8\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mgru_nn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mpy\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;241m*\u001b[39m\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'gru_nn.py'; 'gru_nn' is not a package"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import random\n",
     "import numpy as np\n",
@@ -25,12 +13,12 @@
     "import os\n",
     "import pandas as pd\n",
     "from nn_edm import *\n",
-    "from gru_nn.py import *"
+    "from gru_nn import *"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,16 +70,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "283"
+       "284"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -111,39 +99,27 @@
     "embd_sz = len(data.columns) * E * len(tau_lengths)\n",
     "X = torch.tensor(X[533:], dtype=torch.float) \n",
     "y = torch.tensor(y[533:], dtype=torch.float)\n",
-    "len(y)"
+    "len(X)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/5y/74w_zv855875xvjtmhp4g1xw0000gn/T/ipykernel_27790/2395043709.py:2: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
-      "  model.load_state_dict(torch.load(\"model.pth\"))\n"
-     ]
-    },
-    {
-     "ename": "RuntimeError",
-     "evalue": "Error(s) in loading state_dict for NNEDMModel:\n\tMissing key(s) in state_dict: \"fw.weight\", \"fw.bias\", \"output.weight\", \"output.bias\". \n\tUnexpected key(s) in state_dict: \"gru.weight_ih_l0\", \"gru.weight_hh_l0\", \"gru.bias_ih_l0\", \"gru.bias_hh_l0\", \"gru.weight_ih_l1\", \"gru.weight_hh_l1\", \"gru.bias_ih_l1\", \"gru.bias_hh_l1\", \"attn.in_proj_weight\", \"attn.in_proj_bias\", \"attn.out_proj.weight\", \"attn.out_proj.bias\", \"fc.weight\", \"fc.bias\". ",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[58], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m model \u001b[38;5;241m=\u001b[39m NNEDMModel(embd_sz,hidden_size\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m100\u001b[39m)\n\u001b[0;32m----> 2\u001b[0m \u001b[43mmodel\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mload_state_dict\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtorch\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mload\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mmodel.pth\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      4\u001b[0m model\u001b[38;5;241m.\u001b[39meval()\n\u001b[1;32m      5\u001b[0m prediction \u001b[38;5;241m=\u001b[39m []\n",
-      "File \u001b[0;32m/opt/miniconda3/envs/ChronosHAB/lib/python3.12/site-packages/torch/nn/modules/module.py:2584\u001b[0m, in \u001b[0;36mModule.load_state_dict\u001b[0;34m(self, state_dict, strict, assign)\u001b[0m\n\u001b[1;32m   2576\u001b[0m         error_msgs\u001b[38;5;241m.\u001b[39minsert(\n\u001b[1;32m   2577\u001b[0m             \u001b[38;5;241m0\u001b[39m,\n\u001b[1;32m   2578\u001b[0m             \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mMissing key(s) in state_dict: \u001b[39m\u001b[38;5;132;01m{}\u001b[39;00m\u001b[38;5;124m. \u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m.\u001b[39mformat(\n\u001b[1;32m   2579\u001b[0m                 \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m, \u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m.\u001b[39mjoin(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mk\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m'\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m k \u001b[38;5;129;01min\u001b[39;00m missing_keys)\n\u001b[1;32m   2580\u001b[0m             ),\n\u001b[1;32m   2581\u001b[0m         )\n\u001b[1;32m   2583\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(error_msgs) \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m0\u001b[39m:\n\u001b[0;32m-> 2584\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mRuntimeError\u001b[39;00m(\n\u001b[1;32m   2585\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mError(s) in loading state_dict for \u001b[39m\u001b[38;5;132;01m{}\u001b[39;00m\u001b[38;5;124m:\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;130;01m\\t\u001b[39;00m\u001b[38;5;132;01m{}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m.\u001b[39mformat(\n\u001b[1;32m   2586\u001b[0m             \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m\u001b[38;5;18m__class__\u001b[39m\u001b[38;5;241m.\u001b[39m\u001b[38;5;18m__name__\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;130;01m\\t\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m.\u001b[39mjoin(error_msgs)\n\u001b[1;32m   2587\u001b[0m         )\n\u001b[1;32m   2588\u001b[0m     )\n\u001b[1;32m   2589\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m _IncompatibleKeys(missing_keys, unexpected_keys)\n",
-      "\u001b[0;31mRuntimeError\u001b[0m: Error(s) in loading state_dict for NNEDMModel:\n\tMissing key(s) in state_dict: \"fw.weight\", \"fw.bias\", \"output.weight\", \"output.bias\". \n\tUnexpected key(s) in state_dict: \"gru.weight_ih_l0\", \"gru.weight_hh_l0\", \"gru.bias_ih_l0\", \"gru.bias_hh_l0\", \"gru.weight_ih_l1\", \"gru.weight_hh_l1\", \"gru.bias_ih_l1\", \"gru.bias_hh_l1\", \"attn.in_proj_weight\", \"attn.in_proj_bias\", \"attn.out_proj.weight\", \"attn.out_proj.bias\", \"fc.weight\", \"fc.bias\". "
+      "/var/folders/5y/74w_zv855875xvjtmhp4g1xw0000gn/T/ipykernel_67567/1692564249.py:3: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
+      "  model.load_state_dict(torch.load(\"base_model.pth\"))\n"
      ]
     }
    ],
    "source": [
-    "#model = NNEDMModel(embd_sz,hidden_size=100)\n",
-    "model = G\n",
-    "model.load_state_dict(torch.load(\"model.pth\"))\n",
+    "model = NNEDMModel(embd_sz,hidden_size=100)\n",
+    "#model = GRUEDMModel(embd_sz=embd_sz)\n",
+    "model.load_state_dict(torch.load(\"base_model.pth\"))\n",
     "\n",
     "model.eval()\n",
     "prediction = []\n",
@@ -154,7 +130,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 2.209867 ,  1.8998418,  1.8998704,  2.1029317,  2.1288238,\n",
+       "        2.0142043,  2.1412094,  1.9577843,  2.2683644,  2.164142 ,\n",
+       "        2.3551452,  2.1614013,  2.1952121,  2.3856342,  2.3262348,\n",
+       "        2.5009825,  1.9819975,  2.1345713,  2.044676 ,  2.325422 ,\n",
+       "        3.973245 ,  3.4538572, 15.843585 ,  4.7164826,  6.080781 ,\n",
+       "        3.2018096,  2.2384748,  1.9614384,  2.5669827,  2.1194422,\n",
+       "        2.114854 ,  2.0926416,  3.2585194,  2.4836943,  3.3147755,\n",
+       "        2.8412163,  2.186163 ,  2.0373578,  2.1411843,  2.1480374,\n",
+       "        2.179303 ,  1.9396598,  1.5985733,  1.8525819,  1.804415 ,\n",
+       "        1.7511569,  1.9507066,  2.0212023,  2.3076136,  2.0069497,\n",
+       "        2.3133547,  2.113256 ,  2.11911  ,  2.0236065,  2.018995 ,\n",
+       "        2.1007395,  1.90765  ,  1.9542669,  2.0014944,  2.0074935,\n",
+       "        1.9852434,  1.9764105,  1.9646956,  2.2082717,  2.029346 ,\n",
+       "        2.464256 ,  2.508235 ,  2.5208268,  2.5087414,  2.5187771,\n",
+       "        2.5194933,  2.4989066,  2.4446843,  2.4874933,  2.914415 ,\n",
+       "        2.2094908,  2.3483746,  2.3845546,  2.1856527,  2.2483907,\n",
+       "        2.5237749,  2.3520277,  2.6077142,  2.1994267,  2.6449306,\n",
+       "        1.9242244,  2.1498475,  2.0714371,  2.0456443,  2.096221 ,\n",
+       "        2.1197577,  2.0655038,  1.9937207,  2.123527 ,  1.9617852,\n",
+       "        1.8994774,  1.9794091,  2.0630136,  2.8216002,  2.4779327,\n",
+       "        2.034618 ,  1.9832617,  2.1831286,  2.4032025,  2.4776974,\n",
+       "        2.6326811,  2.8445764,  3.191528 ,  2.4837317,  2.8108041,\n",
+       "        3.8299656,  2.7672615,  2.463602 ,  2.2936203,  2.9174337,\n",
+       "        3.358582 ,  4.087039 ,  4.092128 ,  3.0833585,  2.8153472,\n",
+       "        3.4732704,  2.4336157,  2.8245661,  3.057906 ,  2.8584979,\n",
+       "        2.2835793,  2.436372 ,  2.9608169,  2.2175686,  2.060522 ,\n",
+       "        2.2044985,  2.3051822,  1.9962068,  1.9857457,  2.0296779,\n",
+       "        2.0573165,  2.1775777,  2.2098217,  2.285127 ,  2.2507985,\n",
+       "        2.1648786,  2.9692118,  2.1884525,  2.3714035,  2.3246129,\n",
+       "        2.9118376,  1.9023656,  2.598559 ,  2.2766018,  2.2833593,\n",
+       "        4.536855 ,  2.6331537,  2.0524027,  3.9135222,  2.4271133,\n",
+       "        2.2437801,  2.082315 ,  2.0111465,  2.1241558,  2.0126412,\n",
+       "        2.3794067,  1.9253774,  2.1206496,  2.072045 ,  2.2420883,\n",
+       "        2.646601 ,  2.3184884,  3.0618565,  4.649895 ,  3.342731 ,\n",
+       "        3.0541358,  2.591754 ,  2.9674227,  3.9140794,  2.8345869,\n",
+       "        2.6650565,  4.797298 ,  2.8663943,  3.3467155,  2.480254 ,\n",
+       "        2.2567027,  2.0649452,  2.3829207,  2.3801055,  3.0094564,\n",
+       "        2.2243922,  2.8350806,  2.0003939,  2.154143 ,  1.9391246,\n",
+       "        2.0722318,  1.867633 ,  1.8546083,  1.7998664,  1.8380823,\n",
+       "        5.045291 ,  3.6333122,  4.599519 ,  5.503248 ,  2.1973102,\n",
+       "        2.25134  ,  3.1899753,  2.3666892,  1.9408383,  2.0456223,\n",
+       "        2.0220873,  2.0011888,  1.991514 ,  2.0083463,  1.8713344,\n",
+       "        2.16805  ,  2.0754063,  1.9990913,  2.1403105,  2.2897103,\n",
+       "        2.631724 ,  3.1097035,  2.2790375,  2.476732 ,  2.3963373,\n",
+       "        2.2820137,  3.83999  ,  2.7126548, 14.990082 , 35.221085 ,\n",
+       "        6.5647492,  4.307614 ,  2.6247835,  3.102544 ,  4.685764 ,\n",
+       "        2.3648043,  2.3374248,  2.323502 ,  2.5065365,  2.733578 ,\n",
+       "        3.2831924,  2.335221 ,  2.2709074,  2.5830498,  1.9341148,\n",
+       "        2.1055238,  2.0527391,  1.9418968,  1.9869215,  3.0001466,\n",
+       "        5.2046146,  4.145524 ,  2.1329954,  2.347624 ,  2.1564422,\n",
+       "        2.3740346,  2.067508 ,  1.8808032,  1.9110572,  2.405157 ,\n",
+       "        2.0569077,  2.5275156,  2.5146   ,  2.2278311,  2.2213578,\n",
+       "        2.275284 ,  2.4780662,  2.2033112,  3.5213683,  2.849778 ,\n",
+       "        2.1656873,  2.0575173,  2.2736337,  2.3549585,  4.6228456,\n",
+       "        2.623655 ,  2.4758253,  2.6617067,  2.5732353,  2.7433565,\n",
+       "        2.3960407,  2.15225  ,  2.8235571,  2.867793 ,  2.652677 ,\n",
+       "        2.6835406,  3.8167272,  6.2932425,  6.3794026], dtype=float32)"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "prediction"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -198,7 +250,7 @@
        "         7.82,  17.3 ,  16.71], dtype=float32)"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -209,26 +261,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[np.float64(0.9151943462897526),\n",
-       " np.float64(0.2),\n",
-       " np.float64(0.04477611940298507),\n",
-       " np.float64(0.9552238805970149),\n",
-       " np.float64(0.8)]"
-      ]
-     },
-     "execution_count": 53,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "ValueError",
+     "evalue": "operands could not be broadcast together with shapes (283,) (284,) ",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[24], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mbloom_binary_prediction\u001b[49m\u001b[43m(\u001b[49m\u001b[43my\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mnumpy\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43mprediction\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[0;32mIn[3], line 13\u001b[0m, in \u001b[0;36mbloom_binary_prediction\u001b[0;34m(obs, pred)\u001b[0m\n\u001b[1;32m     11\u001b[0m obs_blooms \u001b[38;5;241m=\u001b[39m obs \u001b[38;5;241m>\u001b[39m obs_bloom_95\n\u001b[1;32m     12\u001b[0m pred_blooms \u001b[38;5;241m=\u001b[39m pred \u001b[38;5;241m>\u001b[39m pred_bloom_95\n\u001b[0;32m---> 13\u001b[0m Accuracy \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1\u001b[39m \u001b[38;5;241m-\u001b[39m (\u001b[43mobs_blooms\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m^\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mpred_blooms\u001b[49m)\u001b[38;5;241m.\u001b[39mmean()\n\u001b[1;32m     14\u001b[0m True_pos \u001b[38;5;241m=\u001b[39m (obs_blooms \u001b[38;5;241m&\u001b[39m pred_blooms)\u001b[38;5;241m.\u001b[39msum() \u001b[38;5;241m/\u001b[39m obs_blooms\u001b[38;5;241m.\u001b[39msum()\n\u001b[1;32m     15\u001b[0m False_pos \u001b[38;5;241m=\u001b[39m ((\u001b[38;5;241m~\u001b[39mobs_blooms) \u001b[38;5;241m&\u001b[39m pred_blooms)\u001b[38;5;241m.\u001b[39msum() \u001b[38;5;241m/\u001b[39m (\u001b[38;5;241m~\u001b[39mobs_blooms)\u001b[38;5;241m.\u001b[39msum()\n",
+      "\u001b[0;31mValueError\u001b[0m: operands could not be broadcast together with shapes (283,) (284,) "
+     ]
     }
    ],
    "source": [
-    "bloom_binary_prediction(y.numpy(),prediction[:-1])"
+    "bloom_binary_prediction(y.numpy(),prediction)"
    ]
   },
   {
