--- a/Code/create_edm.ipynb
+++ b/Code/create_edm.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,11 +89,11 @@
     "    system_variable_lags = []\n",
     "    for var in system_variables:\n",
     "        var_lags = [f'{var}(t{i})' if i < 0 else f'{var}(t-{i})' for i in range(num_lags * tau, 1)]\n",
-    "        var_lags = var_lags[::tau][:num_lags+1]\n",
+    "        var_lags = var_lags[::tau][:num_lags]\n",
     "        system_variable_lags = system_variable_lags + var_lags\n",
     "    \n",
     "    # Remove (t-0) lag of target variable from valid_lags\n",
-    "    valid_lags = [x for x in system_variable_lags if x[-4:-1] != 't-0']\n",
+    "    valid_lags = [x for x in system_variable_lags if x[-4:-1] != f'{target}(t-0)']\n",
     "\n",
     "                    \n",
     "    return valid_lags\n",
@@ -135,11 +135,11 @@
     "    HAB_embed_block = get_block(data,50)\n",
     "    valid_lags = get_valid_lags_tau(HAB_embed_block, target, tau, num_lags, system_variables)\n",
     "    HAB_embeddings = {}\n",
-    "    for E in range(3,16):\n",
+    "    for E in range(3,10):\n",
     "        # Get random embeddings using valid lags\n",
     "        embeddings = set()\n",
-    "        sample = 100\n",
-    "        max_trials = 100\n",
+    "        sample = 500\n",
+    "        max_trials = 500\n",
     "        trials = 0\n",
     "        while len(embeddings) < sample and trials < max_trials:\n",
     "            embedding = tuple(random.sample(valid_lags, E))\n",
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,11 +210,10 @@
     "'''\n",
     "\n",
     "def next_forecast(data,system_variables,target,Tp,E,tau,theta_list,lib,pred,p=0.05):\n",
-    "    lib = '1 ' + str(data.shape[0] - 32) \n",
-    "    pred = '' + str(data.shape[0] - 31) + ' ' + str(data.shape[0])\n",
+    "    lib = '1 512'\n",
+    "    pred = '513 832'\n",
     "    parameters = create_model(data,system_variables,target,Tp,E,tau,theta_list,lib,pred)\n",
-    "    preds = ensemble_binary_bloom(parameters,n=300,p=0.05,samp=1,bloom_thresh=8.013)\n",
-    "    return preds\n",
+    "    return parameters\n",
     "    \n"
    ]
   },
@@ -227,16 +226,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/5y/74w_zv855875xvjtmhp4g1xw0000gn/T/ipykernel_47429/2944759716.py:16: FutureWarning: DataFrame.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
+      "/var/folders/5y/74w_zv855875xvjtmhp4g1xw0000gn/T/ipykernel_14366/3630225188.py:16: FutureWarning: DataFrame.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
       "  X_filled_forward = X.fillna(method='ffill').fillna(method='bfill')\n",
-      "/var/folders/5y/74w_zv855875xvjtmhp4g1xw0000gn/T/ipykernel_47429/2944759716.py:17: FutureWarning: DataFrame.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
+      "/var/folders/5y/74w_zv855875xvjtmhp4g1xw0000gn/T/ipykernel_14366/3630225188.py:17: FutureWarning: DataFrame.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
       "  X_filled_backward = X.fillna(method='bfill').fillna(method='ffill')\n"
      ]
     },
@@ -559,14 +558,14 @@
        "[832 rows x 16 columns]"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "\n",
-    "paper_data = pd.read_csv('Data/data_w_gaps_and_wind.csv')\n",
+    "paper_data = pd.read_csv('Data/data_w_gaps_and_wind.csv') #DESIRED DATAPATH\n",
     "paper_data = paper_data.set_index('time')\n",
     "paper_data['Time'] = paper_data.index.astype(int)\n",
     "paper_data['Avg_Chloro'] #= paper_data['Avg_Chloro'].apply(np.log1p) #LOG AMPUTATION\n",
@@ -598,28 +597,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 38%|███▊      | 32/84 [00:40<01:12,  1.39s/it]"
+      "  0%|          | 0/84 [00:34<?, ?it/s]\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[10], line 21\u001b[0m\n\u001b[1;32m     17\u001b[0m lib \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m1 512\u001b[39m\u001b[38;5;124m'\u001b[39m  \u001b[38;5;66;03m# Library from rows 0 to 700\u001b[39;00m\n\u001b[1;32m     18\u001b[0m pred \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m513 832\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[0;32m---> 21\u001b[0m preds \u001b[38;5;241m=\u001b[39m \u001b[43mnext_forecast\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdata\u001b[49m\u001b[43m,\u001b[49m\u001b[43msystem_variables\u001b[49m\u001b[43m,\u001b[49m\u001b[43mtarget\u001b[49m\u001b[43m,\u001b[49m\u001b[43mTp\u001b[49m\u001b[43m,\u001b[49m\u001b[43mE\u001b[49m\u001b[43m,\u001b[49m\u001b[43mtau\u001b[49m\u001b[43m,\u001b[49m\u001b[43mtheta_list\u001b[49m\u001b[43m,\u001b[49m\u001b[43mlib\u001b[49m\u001b[43m,\u001b[49m\u001b[43mpred\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     22\u001b[0m preds\n",
+      "Cell \u001b[0;32mIn[8], line 28\u001b[0m, in \u001b[0;36mnext_forecast\u001b[0;34m(data, system_variables, target, Tp, E, tau, theta_list, lib, pred, p)\u001b[0m\n\u001b[1;32m     26\u001b[0m lib \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m1 512\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[1;32m     27\u001b[0m pred \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m513 832\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[0;32m---> 28\u001b[0m parameters \u001b[38;5;241m=\u001b[39m \u001b[43mcreate_model\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdata\u001b[49m\u001b[43m,\u001b[49m\u001b[43msystem_variables\u001b[49m\u001b[43m,\u001b[49m\u001b[43mtarget\u001b[49m\u001b[43m,\u001b[49m\u001b[43mTp\u001b[49m\u001b[43m,\u001b[49m\u001b[43mE\u001b[49m\u001b[43m,\u001b[49m\u001b[43mtau\u001b[49m\u001b[43m,\u001b[49m\u001b[43mtheta_list\u001b[49m\u001b[43m,\u001b[49m\u001b[43mlib\u001b[49m\u001b[43m,\u001b[49m\u001b[43mpred\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     29\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m parameters\n",
+      "Cell \u001b[0;32mIn[7], line 102\u001b[0m, in \u001b[0;36mcreate_model\u001b[0;34m(data, system_variables, target, Tp, num_lags, tau, theta_list, lib, pred)\u001b[0m\n\u001b[1;32m    100\u001b[0m embeddings \u001b[38;5;241m=\u001b[39m HAB_embeddings[key[\u001b[38;5;241m0\u001b[39m]]\n\u001b[1;32m    101\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m embedding \u001b[38;5;129;01min\u001b[39;00m embeddings:\n\u001b[0;32m--> 102\u001b[0m     smap_model \u001b[38;5;241m=\u001b[39m \u001b[43mcreate_single_model\u001b[49m\u001b[43m(\u001b[49m\u001b[43mE\u001b[49m\u001b[43m,\u001b[49m\u001b[43mtheta\u001b[49m\u001b[43m,\u001b[49m\u001b[43mtarget\u001b[49m\u001b[43m,\u001b[49m\u001b[43membedding\u001b[49m\u001b[43m,\u001b[49m\u001b[43mlib\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mpred\u001b[49m\u001b[43m,\u001b[49m\u001b[43mHAB_embed_block\u001b[49m\u001b[43m,\u001b[49m\u001b[43mshowPlot\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mFalse\u001b[39;49;00m\u001b[43m)\u001b[49m\n\u001b[1;32m    103\u001b[0m     df \u001b[38;5;241m=\u001b[39m smap_model[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mpredictions\u001b[39m\u001b[38;5;124m'\u001b[39m]\n\u001b[1;32m    104\u001b[0m     rho \u001b[38;5;241m=\u001b[39m df[[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mObservations\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mPredictions\u001b[39m\u001b[38;5;124m'\u001b[39m]]\u001b[38;5;241m.\u001b[39mcorr()\u001b[38;5;241m.\u001b[39miloc[\u001b[38;5;241m0\u001b[39m,\u001b[38;5;241m1\u001b[39m]\n",
+      "Cell \u001b[0;32mIn[7], line 41\u001b[0m, in \u001b[0;36mcreate_single_model\u001b[0;34m(E, theta, target, i_cols, lib, pred, HAB_embed, showPlot)\u001b[0m\n\u001b[1;32m     39\u001b[0m driver \u001b[38;5;241m=\u001b[39m \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mtarget\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m(t-0)\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[1;32m     40\u001b[0m cols \u001b[38;5;241m=\u001b[39m i_cols \u001b[38;5;241m+\u001b[39m [driver]\n\u001b[0;32m---> 41\u001b[0m result \u001b[38;5;241m=\u001b[39m \u001b[43mSMap\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m     42\u001b[0m \u001b[43m    \u001b[49m\u001b[43mdataFrame\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mHAB_embed\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\n\u001b[1;32m     43\u001b[0m \u001b[43m    \u001b[49m\u001b[43mcolumns\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mcols\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m     44\u001b[0m \u001b[43m    \u001b[49m\u001b[43mtarget\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mdriver\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m     45\u001b[0m \u001b[43m    \u001b[49m\u001b[43mlib\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mlib\u001b[49m\u001b[43m,\u001b[49m\u001b[43m  \u001b[49m\u001b[38;5;66;43;03m# Library from rows 0 to 700\u001b[39;49;00m\n\u001b[1;32m     46\u001b[0m \u001b[43m    \u001b[49m\u001b[43mpred\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mpred\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m     47\u001b[0m \u001b[43m    \u001b[49m\u001b[43mE\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mE\u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[1;32m     48\u001b[0m \u001b[43m    \u001b[49m\u001b[43mtheta\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mtheta\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m     49\u001b[0m \u001b[43m    \u001b[49m\u001b[43mnoTime\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m,\u001b[49m\n\u001b[1;32m     50\u001b[0m \u001b[43m    \u001b[49m\u001b[43mshowPlot\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mshowPlot\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m     51\u001b[0m \u001b[43m    \u001b[49m\u001b[43membedded\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m,\u001b[49m\n\u001b[1;32m     52\u001b[0m \u001b[43m    \u001b[49m\u001b[43mignoreNan\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\n\u001b[1;32m     53\u001b[0m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     54\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m result\n",
+      "File \u001b[0;32m/opt/miniconda3/envs/pyedm_env/lib/python3.9/site-packages/pyEDM/API.py:211\u001b[0m, in \u001b[0;36mSMap\u001b[0;34m(dataFrame, columns, target, lib, pred, E, Tp, knn, tau, theta, exclusionRadius, solver, embedded, validLib, noTime, ignoreNan, showPlot, verbose, returnObject)\u001b[0m\n\u001b[1;32m    209\u001b[0m S\u001b[38;5;241m.\u001b[39mEmbedData()\n\u001b[1;32m    210\u001b[0m S\u001b[38;5;241m.\u001b[39mRemoveNan()\n\u001b[0;32m--> 211\u001b[0m \u001b[43mS\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mFindNeighbors\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    212\u001b[0m S\u001b[38;5;241m.\u001b[39mProject()\n\u001b[1;32m    213\u001b[0m S\u001b[38;5;241m.\u001b[39mFormatProjection()\n",
+      "File \u001b[0;32m/opt/miniconda3/envs/pyedm_env/lib/python3.9/site-packages/pyEDM/Neighbors.py:152\u001b[0m, in \u001b[0;36mFindNeighbors\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    148\u001b[0m     knn_neighbors_ \u001b[38;5;241m=\u001b[39m zeros( \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mknn_neighbors\u001b[38;5;241m.\u001b[39mshape, dtype \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mint\u001b[39m )\n\u001b[1;32m    150\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m j \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m( \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mknn_neighbors\u001b[38;5;241m.\u001b[39mshape[\u001b[38;5;241m1\u001b[39m] ) :\n\u001b[1;32m    151\u001b[0m         knn_neighbors_[:,j] \u001b[38;5;241m=\u001b[39m \\\n\u001b[0;32m--> 152\u001b[0m             \u001b[43mapply_along_axis\u001b[49m\u001b[43m(\u001b[49m\u001b[43m \u001b[49m\u001b[43mknnMapFunc\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[1;32m    153\u001b[0m \u001b[43m                              \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mknn_neighbors\u001b[49m\u001b[43m[\u001b[49m\u001b[43m:\u001b[49m\u001b[43m,\u001b[49m\u001b[43mj\u001b[49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mknn_lib_map\u001b[49m\u001b[43m \u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    155\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mknn_neighbors \u001b[38;5;241m=\u001b[39m knn_neighbors_\n\u001b[1;32m    157\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mlibOverlap :\n\u001b[1;32m    158\u001b[0m     \u001b[38;5;66;03m# Remove degenerate knn_distances, knn_neighbors\u001b[39;00m\n\u001b[1;32m    159\u001b[0m     \u001b[38;5;66;03m# Get first column of knn_neighbors with knn_distance = 0\u001b[39;00m\n",
+      "File \u001b[0;32m/opt/miniconda3/envs/pyedm_env/lib/python3.9/site-packages/numpy/lib/shape_base.py:379\u001b[0m, in \u001b[0;36mapply_along_axis\u001b[0;34m(func1d, axis, arr, *args, **kwargs)\u001b[0m\n\u001b[1;32m    375\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mStopIteration\u001b[39;00m:\n\u001b[1;32m    376\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[1;32m    377\u001b[0m         \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mCannot apply_along_axis when any iteration dimensions are 0\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[1;32m    378\u001b[0m     ) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[0;32m--> 379\u001b[0m res \u001b[38;5;241m=\u001b[39m asanyarray(\u001b[43mfunc1d\u001b[49m\u001b[43m(\u001b[49m\u001b[43minarr_view\u001b[49m\u001b[43m[\u001b[49m\u001b[43mind0\u001b[49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m)\n\u001b[1;32m    381\u001b[0m \u001b[38;5;66;03m# build a buffer for storing evaluations of func1d.\u001b[39;00m\n\u001b[1;32m    382\u001b[0m \u001b[38;5;66;03m# remove the requested axis, and add the new ones on the end.\u001b[39;00m\n\u001b[1;32m    383\u001b[0m \u001b[38;5;66;03m# laid out so that each write is contiguous.\u001b[39;00m\n\u001b[1;32m    384\u001b[0m \u001b[38;5;66;03m# for a tuple index inds, buff[inds] = func1d(inarr_view[inds])\u001b[39;00m\n\u001b[1;32m    385\u001b[0m buff \u001b[38;5;241m=\u001b[39m zeros(inarr_view\u001b[38;5;241m.\u001b[39mshape[:\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m] \u001b[38;5;241m+\u001b[39m res\u001b[38;5;241m.\u001b[39mshape, res\u001b[38;5;241m.\u001b[39mdtype)\n",
+      "File \u001b[0;32m/opt/miniconda3/envs/pyedm_env/lib/python3.9/site-packages/pyEDM/Neighbors.py:141\u001b[0m, in \u001b[0;36mFindNeighbors.<locals>.knnMapFunc\u001b[0;34m(knn, knn_lib_map)\u001b[0m\n\u001b[1;32m    139\u001b[0m out \u001b[38;5;241m=\u001b[39m zeros( \u001b[38;5;28mlen\u001b[39m( knn ), dtype \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mint\u001b[39m )\n\u001b[1;32m    140\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m( \u001b[38;5;28mlen\u001b[39m( knn ) ) :\n\u001b[0;32m--> 141\u001b[0m     idx    \u001b[38;5;241m=\u001b[39m \u001b[43mknn\u001b[49m\u001b[43m[\u001b[49m\u001b[43mi\u001b[49m\u001b[43m]\u001b[49m\n\u001b[1;32m    142\u001b[0m     out[i] \u001b[38;5;241m=\u001b[39m knn_lib_map[ idx ]\n\u001b[1;32m    143\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m out\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
    "source": [
     "data = paper_data\n",
-    "system_variables = ['AVG_SAL_PSU', 'Avg_Chloro', 'Nitrate', 'SURF_TEMP_C','BOT_DENS_kgm3']\n",
-    "target = 'Avg_Chloro'\n",
+    "system_variables = ['AVG_SAL_PSU',\n",
+    " 'AVG_TEMP_C',\n",
+    " 'Avg_Chloro',\n",
+    " 'BOT_DENS_kgm3',\n",
+    " 'BOT_SAL_PSU',\n",
+    " 'Nitrate',\n",
+    " 'Nitrite',\n",
+    " 'WSPD'] #SYSTEM VARIABLES\n",
+    "\n",
+    "target = 'Avg_Chloro' #TARGET\n",
     "system_variables = system_variables\n",
     "Tp = 1\n",
     "E = 3 # up to -2 \n",
     "tau = -1\n",
     "theta_list = [1,5,9,15,25,35,45]\n",
-    "lib = '1 800'  # Library from rows 0 to 700\n",
-    "pred = '801 832'\n",
+    "lib = '1 512'  # Library from rows 0 to 700\n",
+    "pred = '513 832'\n",
     "\n",
     "\n",
     "preds = next_forecast(data,system_variables,target,Tp,E,tau,theta_list,lib,pred)\n",
@@ -628,14 +653,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Eval\n",
-    "for i in range(700,833):\n",
-    "    preds = next_forecast(data.iloc[],system_variables,target,Tp,E,tau,theta_list,lib,pred)\n",
-    "    "
+    "preds['pred'] = preds['pred'].apply(list)\n",
+    "preds.to_csv('Results/100_sample_baseline_models.csv') #TO SAVE"
    ]
   },
   {
